@@ -5,7 +5,7 @@ NAME
 SYNOPSIS
             package User;
         
-            use Moose;
+            use Moose; # or Moo
             with 'Abilities';
         
             # ... define required methods ...
@@ -63,15 +63,15 @@ DESCRIPTION
     decisions to the end-user, which might actually be necessary in certain
     situations.
 
-    The "Abilities" module is implemented as a Moose role (but uses
-    Any::Moose). In order to be able to use this mechanism, applications
-    must implement a user management system that will consume this role.
-    More specifically, a user class and a role class must be implemented,
-    consuming this role. Entities is a reference implementation that can be
-    used by applications, or just taken as an example of an ability-based
-    authorization system. Entities::User and Entities::Role are the user and
-    role classes that consume the Abilities role in the Entities
-    distribution.
+    The "Abilities" module is implemented as a Moo role (which makes it
+    compatible with Moose code). In order to be able to use this mechanism,
+    applications must implement a user management system that will consume
+    this role. More specifically, a user class and a role class must be
+    implemented, consuming this role. Entities is a reference implementation
+    that can be used by applications, or just taken as an example of an
+    ability-based authorization system. Entities::User and Entities::Role
+    are the user and role classes that consume the Abilities role in the
+    Entities distribution.
 
   CONSTRAINTS
     Generally, an ability is a yes/no option. Either the user can or can't
@@ -102,8 +102,8 @@ DESCRIPTION
     optional support for subscription-based web services, such as those
     where customers subscribe to a certain paid (or free, doesn't matter)
     plan from a list of available plans (GitHub is an example of such a
-    service). This functionality is also implemented as a Moose role, in the
-    Abilities::Features module provided with this distribution. Read its
+    service). This functionality is also implemented as a Moo(se) role, in
+    the Abilities::Features module provided with this distribution. Read its
     documentation for detailed information.
 
 REQUIRED METHODS
@@ -116,7 +116,7 @@ REQUIRED METHODS
 
     Example return structure:
 
-            ( 'moderator', 'supporter' ]
+            ( 'moderator', 'supporter' )
 
     NOTE: In previous versions, this method was required to return an array
     of role objects, not a list of role names. This has been changed in
@@ -218,7 +218,7 @@ SUPPORT
         <http://search.cpan.org/dist/Abilities/>
 
 LICENSE AND COPYRIGHT
-    Copyright 2010-2012 Ido Perlmuter.
+    Copyright 2010-2013 Ido Perlmuter.
 
     This program is free software; you can redistribute it and/or modify it
     under the terms of either: the GNU General Public License as published
