@@ -1,15 +1,15 @@
 package Abilities::Features;
 
-use Any::Moose 'Role';
+# ABSTRACT: Extends Abilities with plan management for subscription-based web services.
+
+use Moo::Role;
 use namespace::autoclean;
 
 use Carp;
 use Hash::Merge qw/merge/;
 
-our $VERSION = "0.3";
+our $VERSION = "0.4";
 $VERSION = eval $VERSION;
-
-# ABSTRACT: Extends Abilities with plan management for subscription-based web services.
 
 =head1 NAME
 
@@ -19,7 +19,7 @@ Abilities::Features - Extends Abilities with plan management for subscription-ba
 
 	package Customer;
 	
-	use Moose;
+	use Moose; # or Moo
 	with 'Abilities::Features';
 	
 	# ... define required methods ...
@@ -38,7 +38,7 @@ Abilities::Features - Extends Abilities with plan management for subscription-ba
 
 =head1 DESCRIPTION
 
-This L<Moose role|Moose::Role> extends the ability-based authorization
+This L<Moo role|Moo::Role> extends the ability-based authorization
 system defined by the L<Abilities> module with customer and plan management
 for subscription-based web services. This includes paid services, where
 customers subscribe to a plan from a list of available plans, each plan
@@ -116,7 +116,10 @@ Keys of this hash-ref will be the names of the features, values will either be
 
 =cut
 
-has 'available_features' => (is => 'ro', isa => 'HashRef', lazy_build => 1);
+has 'available_features' => (
+	is => 'lazy',
+	isa => sub { die "abilities must be a hash-ref" unless ref $_[0] eq 'HASH' },
+);
 
 =head1 METHODS
 
@@ -284,7 +287,7 @@ L<http://search.cpan.org/dist/Abilities/>
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright 2010-2012 Ido Perlmuter.
+Copyright 2010-2013 Ido Perlmuter.
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of either: the GNU General Public License as published
