@@ -1,6 +1,12 @@
 Revision history for Abilities
 
 {{$NEXT}}
+	[ VARIOUS CHANGES ]
+	- Moved from Any::Moose to Moo as per the former's deprecation
+
+	[ BUGFIXES ]
+	- fixed _build_abilities() to skip non-blessed roles (submitted by cafe01)
+	- small documentation fixes
 
 0.3       2012-12-28 17:15:01 Asia/Jerusalem
 	[ BACKWARDS COMPATIBILITY BROKEN ]
